--- a/arch/arm/boot/dts/imx6dl-sabresd.dts
+++ b/arch/arm/boot/dts/imx6dl-sabresd.dts
@@ -22,6 +22,7 @@
 	offset-usb-charger = <1285>;
 };
 
+#if 0
 &i2c3 {
 	max17135@48 {
 		compatible = "maxim,max17135";
@@ -90,7 +91,9 @@
 		};
 	};
 };
+#endif
 
+#if 0
 &iomuxc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog_1>, <&pinctrl_hog_2>;
@@ -121,6 +124,7 @@
 	DISPLAY-supply = <&DISPLAY_reg>;
 	status = "okay";
 };
+#endif
 
 &ldb {
 	ipu_id = <0>;
