--- a/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
@@ -142,12 +142,13 @@
 			gpios = <&gpio1 4 1>;
 			linux,code = <115>; /* KEY_VOLUMEUP */
 		};
-
+		#if 0
 		volume-down {
 			label = "Volume Down";
 			gpios = <&gpio1 5 1>;
 			linux,code = <114>; /* KEY_VOLUMEDOWN */
 		};
+		#endif
 	};
 
         sound {
@@ -228,7 +229,8 @@
 	backlight {
 		compatible = "pwm-backlight";
 		pwms = <&pwm1 0 5000000>;
-		brightness-levels = <0 4 8 16 32 64 128 255>;
+		//brightness-levels = <0 4 8 16 32 64 128 255>;
+		brightness-levels = <0 4 8 16 32 200 230 255>;
 		default-brightness-level = <7>;
 	};
 
@@ -489,7 +491,7 @@
 				MX6QDL_PAD_GPIO_0__CCM_CLKO1    0x130b0
 				MX6QDL_PAD_NANDF_CS2__GPIO6_IO15 0x80000000
 				MX6QDL_PAD_NANDF_CS3__GPIO6_IO16 0x80000000
-				MX6QDL_PAD_EIM_D26__GPIO3_IO26 0x80000000
+				//MX6QDL_PAD_EIM_D26__GPIO3_IO26 0x80000000
 				MX6QDL_PAD_EIM_CS1__GPIO2_IO24 0x80000000
 				MX6QDL_PAD_ENET_RXD0__GPIO1_IO27 0x80000000
 				MX6QDL_PAD_EIM_A25__GPIO5_IO02 0x80000000
@@ -549,6 +551,8 @@
         //power-on-gpio = <&gpio3 19 0>;
         //reset-gpio = <&gpio1 5 1>;
 
+	//power-on-gpio = <&gpio3 19 0>;
+        reset-gpio = <&gpio1 5 0>;
         status = "okay";
 };
 
