--- a/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
@@ -528,6 +528,7 @@
 	status = "okay";
 };
 
+#if 0
 &mipi_csi {
 	status = "okay";
 	ipu_id = <0>;
@@ -544,6 +545,7 @@
 	resets = <&mipi_dsi_reset>;
 	status = "okay";
 };
+#endif
 
 &pcie {
         //power-on-gpio = <&gpio3 19 0>;
